Note: this log is only for work done since the conversion for 1.x

1 August 2008
+ Removed some compatibility functions from Core. Redistributed to
this module.

Version 1.4.6
-----------------------------------------------------------------
29 April 2008
+ Some edits to try and make sorting work better.

Version 1.4.5
-----------------------------------------------------------------
+ Fixed bug preventing image upload.


Version 1.4.4
-----------------------------------------------------------------
26 March 2008
+ Fixed album page navigation. Thanks Verdon.

20 February 2008
+ Fixed path to icon in SlideShow.

14 December 2007
+ Fixes attempted for batch upload.

13 December 2007
+ Removed html tags and newline calls causing javascript errors.
+ Fixed: photoalbum was calling hub config file instead of local
  version

Version 1.4.3 - 4 Dec 2007
----------------------------------------------------------------
7 November 2007
+ Increased resize width and height for photoalbum
+ Fixed resize functionality
+ Updated : conf/config.php

Version 1.4.2 -- 20 August 2007
----------------------------------------------------------------
16 August 2007
+ Applied resize patch supplied by Verdon Vaillancourt

Version 1.4.1 -- 25 July 2007
----------------------------------------------------------------
23 July 2007
+ RFE #1757050 - Added resizing code from Verdon


Version 1.4.0
----------------------------------------------------------------
19 April 2007
+ Changed functional call to conform with new File Cabinet

5 April 2007
+ Added German translation
+ Updated language functions

5 March 2007
+ Changed control panel icon

Version 1.3.4
-----------------------------------------------------------------
17 February 2007
+ Added translate function

12 January 2007
+ Linked the Album image

Version 1.3.3
-----------------------------------------------------------------
15 November 2006
+ changed pager to use album ids and not photo id. big bug

26 October 2006